[package]
name = "gtk4-rust-counter-app-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }

[build-dependencies]
glib-build-tools = "0.18"
